--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,9 +9,45 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Add issue to Task project
-        uses: actions-ecosystem/action-add-project-card@v1
+        uses: actions/github-script@v6
         with:
-          project_url: https://github.com/users/MiyoshiTaishou/projects/1/views/1# TaskプロジェクトのURLを入力
-          column_name: "To Do"  # プロジェクトの列名を指定
+          script: |
+            const projectNumber = 1; // あなたのプロジェクトの番号（例：1）
+            const columnName = "To Do"; // カラム名を指定
+
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const issueNumber = context.issue.number;
+
+            // リポジトリのプロジェクトを取得
+            const { data: projects } = await github.projects.listForRepo({
+              owner,
+              repo
+            });
+
+            // プロジェクトを検索
+            const project = projects.find(p => p.number === projectNumber);
+
+            if (!project) {
+              throw new Error(`Project with number ${projectNumber} not found`);
+            }
+
+            // プロジェクトのカラムを取得
+            const { data: columns } = await github.projects.listColumns({
+              project_id: project.id
+            });
+
+            const column = columns.find(c => c.name === columnName);
+
+            if (!column) {
+              throw new Error(`Column with name ${columnName} not found in project`);
+            }
+
+            // Issueをプロジェクトのカラムに追加
+            await github.projects.createCard({
+              column_id: column.id,
+              content_id: issueNumber,
+              content_type: 'Issue'
+            });
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
