--- a/MS2025/Assembly-CSharp.csproj
+++ b/MS2025/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Script\Player\AttackAreaDamage.cs" />
     <Compile Include="Assets\Script\benri\FPSFreeze.cs" />
     <Compile Include="Assets\Script\Scene\BaseSceneManager.cs" />
+    <Compile Include="Assets\Script\UI\ButtonSelect.cs" />
     <Compile Include="Assets\Script\Character\PlayerChild\AttackSystem.cs" />
     <Compile Include="Assets\Script\Character\Local\LocalPlayerAttack.cs" />
     <Compile Include="Assets\Script\Convenience\ReadOnlyAttribute.cs" />
