Jumpと移動実装

--- a/MS2025/Assembly-CSharp.csproj
+++ b/MS2025/Assembly-CSharp.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Assets\Script\Character\Local\LocalPlayerSpwan.cs" />
     <Compile Include="Assets\Script\Network\GameLauncher.cs" />
     <Compile Include="Assets\Script\Character\PlayerState\PlayerIdleState.cs" />
+    <Compile Include="Assets\Script\Character\Network\PlayerJumpNet.cs" />
     <Compile Include="Assets\Script\Scene\CanavsFadeSceneLoad.cs" />
     <Compile Include="Assets\Script\Camera\CameraMove.cs" />
     <Compile Include="Assets\Script\UI\ComboGauge.cs" />
