--- a/MS2025/Assembly-CSharp-Editor.csproj
+++ b/MS2025/Assembly-CSharp-Editor.csproj
@@ -1145,9 +1145,33 @@
       <Project>{F617202E-0532-A9EA-1A83-37FE3806092B}</Project>
       <Name>Assembly-CSharp</Name>
     </ProjectReference>
+    <ProjectReference Include="CFXR.WelcomeScreen.csproj">
+      <Project>{00B79FF3-B8DB-159F-3002-E86E6909C4AB}</Project>
+      <Name>CFXR.WelcomeScreen</Name>
+    </ProjectReference>
+    <ProjectReference Include="KinoBloom.Runtime.csproj">
+      <Project>{70EBFAAE-074D-59C9-5209-35473D560715}</Project>
+      <Name>KinoBloom.Runtime</Name>
+    </ProjectReference>
     <ProjectReference Include="Fusion.Addons.Physics.csproj">
       <Project>{1DC50B61-25A3-ABAE-5E7B-A45D545E7108}</Project>
       <Name>Fusion.Addons.Physics</Name>
+    </ProjectReference>
+    <ProjectReference Include="ToonyColorsPro.Demo.Editor.csproj">
+      <Project>{FD55F6B1-1FF6-F14A-0C1B-804524EDA6B5}</Project>
+      <Name>ToonyColorsPro.Demo.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="CFXRRuntime.csproj">
+      <Project>{78623C1F-98A6-6AA9-F5B5-E639923682E1}</Project>
+      <Name>CFXRRuntime</Name>
+    </ProjectReference>
+    <ProjectReference Include="CFXREditor.csproj">
+      <Project>{9793F375-95EE-BB4B-D0F3-EF96CBC64B61}</Project>
+      <Name>CFXREditor</Name>
+    </ProjectReference>
+    <ProjectReference Include="CFXRDemo.csproj">
+      <Project>{576F7C1F-9FB9-77AE-D7D9-624329097358}</Project>
+      <Name>CFXRDemo</Name>
     </ProjectReference>
     <ProjectReference Include="Fusion.Unity.csproj">
       <Project>{3D83DB08-49FA-603D-E9CA-98B0E9C68302}</Project>
